# bezier_mesh

./: Cargo.toml
assets/: uv_debug_material.wgsl
src/: main.rs  material.rs
