[package]
name = "bezier_mesh"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.10.1"
bevy_vector_shapes = "0.3.3"
bevy-inspector-egui = "0.18.3"
bevy_panorbit_camera = "0.4.1"
bevy_transform_gizmo = "0.6.0"
bevy_mod_picking = "0.12.0"
itertools = "0.10.5"
